[package]
name = "kealint"
version = "1.0.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"

[dev-dependencies]
rstest = "0.26.1"
